parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ADD
    BLOCK
    CALL
    COS
    DATA
    DIMENSION
    DO_WHILE
    ELSEIF
    ENDDO
    FORMAT
    FORMAT_CODE
    MULT
    NOT
    PARAMETER
    SEN
    STOP
    SUB
    SUBROUTINE
    UNTIL
    WHILE
    comment

Grammar

Rule 0     S' -> Program
Rule 1     Program -> PROGRAM NAME Lines END Program_continuations
Rule 2     Program_continuations -> Program_continuations Program_continuation
Rule 3     Program_continuations -> <empty>
Rule 4     Program_continuation -> Type Fun NAME ( Arguments ) Lines RETURN END
Rule 5     Fun -> FUNCTION
Rule 6     Lines -> Lines Line
Rule 7     Lines -> Line
Rule 8     Line -> Start Statement
Rule 9     Start -> LABEL
Rule 10    Start -> <empty>
Rule 11    Statement -> FuncCall
Rule 12    Statement -> Declaration
Rule 13    Statement -> Assignment
Rule 14    Statement -> Do_Statement
Rule 15    Statement -> If_Statement
Rule 16    Statement -> Goto_statement
Rule 17    Declaration -> Type Variables
Rule 18    Declaration -> COMMON SEPARATOR IDEN SEPARATOR Variables
Rule 19    Type -> INT_IDEN
Rule 20    Type -> REAL_IDEN
Rule 21    Type -> DOUBLE_IDEN
Rule 22    Type -> COMPLEX_IDEN
Rule 23    Type -> LOGICAL_IDEN
Rule 24    Type -> CHARACTER_IDEN
Rule 25    Variables -> Variables , Variable
Rule 26    Variables -> Variable
Rule 27    Variable -> Array
Rule 28    Variable -> CHARACTER
Rule 29    Variable -> IDEN
Rule 30    Array -> IDEN ( Indexes )
Rule 31    Indexes -> Indexes , Index
Rule 32    Indexes -> Index
Rule 33    Index -> INT
Rule 34    Index -> IDEN
Rule 35    FuncCall -> IO_Function
Rule 36    FuncCall -> Math_Function
Rule 37    Math_Function -> MOD ( Variables )
Rule 38    IO_Function -> WRITE Def Variables
Rule 39    IO_Function -> PRINT Def Variables
Rule 40    IO_Function -> READ Def Variables
Rule 41    Def -> ( UnitNo , LABEL )
Rule 42    Def -> UnitNo ,
Rule 43    UnitNo -> INT
Rule 44    UnitNo -> *
Rule 45    Assignment -> IDEN = Expression_paren
Rule 46    Expression_paren -> ( Expression )
Rule 47    Expression_paren -> Expression
Rule 48    Expression -> E
Rule 49    Expression -> LOGICAL
Rule 50    Function -> IDEN ( Arguments )
Rule 51    Arguments -> Arguments , Argument
Rule 52    Arguments -> Argument
Rule 53    Argument -> Variable
Rule 54    Argument -> <empty>
Rule 55    E -> E + T
Rule 56    E -> E - T
Rule 57    E -> T
Rule 58    T -> T EXPO F
Rule 59    T -> T * F
Rule 60    T -> T DIV F
Rule 61    T -> F
Rule 62    F -> ( E )
Rule 63    F -> Math_Function
Rule 64    F -> IDEN Suffix
Rule 65    F -> INT
Rule 66    F -> REAL
Rule 67    F -> DOUBLE
Rule 68    F -> COMPLEX
Rule 69    Suffix -> ( Arguments )
Rule 70    Suffix -> <empty>
Rule 71    Do_Statement -> DO LABEL IDEN = Loop_Values Lines LABEL CONTINUE
Rule 72    Loop_Values -> Loop_Value , Loop_Value
Rule 73    Loop_Values -> Loop_Value , Loop_Value , Loop_Value
Rule 74    Loop_Value -> INT
Rule 75    Loop_Value -> REAL
Rule 76    Loop_Value -> IDEN
Rule 77    If_Statement -> IF ( Conditions ) THEN Lines If_Continuation ENDIF
Rule 78    Conditions -> Conditions BoolOp Condition
Rule 79    Conditions -> Condition
Rule 80    BoolOp -> AND
Rule 81    BoolOp -> OR
Rule 82    Condition -> Expression_paren CondOp Expression_paren
Rule 83    Condition -> Expression_paren
Rule 84    CondOp -> LESSTHAN
Rule 85    CondOp -> LESSEQ
Rule 86    CondOp -> GREATERTHAN
Rule 87    CondOp -> GREATEREQ
Rule 88    CondOp -> EQ
Rule 89    CondOp -> NOTEQ
Rule 90    If_Continuation -> ELSE Lines
Rule 91    If_Continuation -> <empty>
Rule 92    Goto_statement -> GOTO LABEL

Terminals, with rules where they appear

(                    : 4 30 37 41 46 50 62 69 77
)                    : 4 30 37 41 46 50 62 69 77
*                    : 44 59
+                    : 55
,                    : 25 31 41 42 51 72 73 73
-                    : 56
=                    : 45 71
ADD                  : 
AND                  : 80
BLOCK                : 
CALL                 : 
CHARACTER            : 28
CHARACTER_IDEN       : 24
COMMON               : 18
COMPLEX              : 68
COMPLEX_IDEN         : 22
CONTINUE             : 71
COS                  : 
DATA                 : 
DIMENSION            : 
DIV                  : 60
DO                   : 71
DOUBLE               : 67
DOUBLE_IDEN          : 21
DO_WHILE             : 
ELSE                 : 90
ELSEIF               : 
END                  : 1 4
ENDDO                : 
ENDIF                : 77
EQ                   : 88
EXPO                 : 58
FORMAT               : 
FORMAT_CODE          : 
FUNCTION             : 5
GOTO                 : 92
GREATEREQ            : 87
GREATERTHAN          : 86
IDEN                 : 18 29 30 34 45 50 64 71 76
IF                   : 77
INT                  : 33 43 65 74
INT_IDEN             : 19
LABEL                : 9 41 71 71 92
LESSEQ               : 85
LESSTHAN             : 84
LOGICAL              : 49
LOGICAL_IDEN         : 23
MOD                  : 37
MULT                 : 
NAME                 : 1 4
NOT                  : 
NOTEQ                : 89
OR                   : 81
PARAMETER            : 
PRINT                : 39
PROGRAM              : 1
READ                 : 40
REAL                 : 66 75
REAL_IDEN            : 20
RETURN               : 4
SEN                  : 
SEPARATOR            : 18 18
STOP                 : 
SUB                  : 
SUBROUTINE           : 
THEN                 : 77
UNTIL                : 
WHILE                : 
WRITE                : 38
comment              : 
error                : 

Nonterminals, with rules where they appear

Argument             : 51 52
Arguments            : 4 50 51 69
Array                : 27
Assignment           : 13
BoolOp               : 78
CondOp               : 82
Condition            : 78 79
Conditions           : 77 78
Declaration          : 12
Def                  : 38 39 40
Do_Statement         : 14
E                    : 48 55 56 62
Expression           : 46 47
Expression_paren     : 45 82 82 83
F                    : 58 59 60 61
Fun                  : 4
FuncCall             : 11
Function             : 
Goto_statement       : 16
IO_Function          : 35
If_Continuation      : 77
If_Statement         : 15
Index                : 31 32
Indexes              : 30 31
Line                 : 6 7
Lines                : 1 4 6 71 77 90
Loop_Value           : 72 72 73 73 73
Loop_Values          : 71
Math_Function        : 36 63
Program              : 0
Program_continuation : 2
Program_continuations : 1 2
Start                : 8
Statement            : 8
Suffix               : 64
T                    : 55 56 57 58 59 60
Type                 : 4 17
UnitNo               : 41 42
Variable             : 25 26 53
Variables            : 17 18 25 37 38 39 40

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . PROGRAM NAME Lines END Program_continuations

    PROGRAM         shift and go to state 2

    Program                        shift and go to state 1

state 1

    (0) S' -> Program .



state 2

    (1) Program -> PROGRAM . NAME Lines END Program_continuations

    NAME            shift and go to state 3


state 3

    (1) Program -> PROGRAM NAME . Lines END Program_continuations
    (6) Lines -> . Lines Line
    (7) Lines -> . Line
    (8) Line -> . Start Statement
    (9) Start -> . LABEL
    (10) Start -> .

    LABEL           shift and go to state 7
    COMMON          reduce using rule 10 (Start -> .)
    IDEN            reduce using rule 10 (Start -> .)
    DO              reduce using rule 10 (Start -> .)
    IF              reduce using rule 10 (Start -> .)
    GOTO            reduce using rule 10 (Start -> .)
    WRITE           reduce using rule 10 (Start -> .)
    PRINT           reduce using rule 10 (Start -> .)
    READ            reduce using rule 10 (Start -> .)
    MOD             reduce using rule 10 (Start -> .)
    INT_IDEN        reduce using rule 10 (Start -> .)
    REAL_IDEN       reduce using rule 10 (Start -> .)
    DOUBLE_IDEN     reduce using rule 10 (Start -> .)
    COMPLEX_IDEN    reduce using rule 10 (Start -> .)
    LOGICAL_IDEN    reduce using rule 10 (Start -> .)
    CHARACTER_IDEN  reduce using rule 10 (Start -> .)

    Lines                          shift and go to state 4
    Line                           shift and go to state 5
    Start                          shift and go to state 6

state 4

    (1) Program -> PROGRAM NAME Lines . END Program_continuations
    (6) Lines -> Lines . Line
    (8) Line -> . Start Statement
    (9) Start -> . LABEL
    (10) Start -> .

    END             shift and go to state 8
    LABEL           shift and go to state 7
    COMMON          reduce using rule 10 (Start -> .)
    IDEN            reduce using rule 10 (Start -> .)
    DO              reduce using rule 10 (Start -> .)
    IF              reduce using rule 10 (Start -> .)
    GOTO            reduce using rule 10 (Start -> .)
    WRITE           reduce using rule 10 (Start -> .)
    PRINT           reduce using rule 10 (Start -> .)
    READ            reduce using rule 10 (Start -> .)
    MOD             reduce using rule 10 (Start -> .)
    INT_IDEN        reduce using rule 10 (Start -> .)
    REAL_IDEN       reduce using rule 10 (Start -> .)
    DOUBLE_IDEN     reduce using rule 10 (Start -> .)
    COMPLEX_IDEN    reduce using rule 10 (Start -> .)
    LOGICAL_IDEN    reduce using rule 10 (Start -> .)
    CHARACTER_IDEN  reduce using rule 10 (Start -> .)

    Line                           shift and go to state 9
    Start                          shift and go to state 6

state 5

    (7) Lines -> Line .

    END             reduce using rule 7 (Lines -> Line .)
    LABEL           reduce using rule 7 (Lines -> Line .)
    COMMON          reduce using rule 7 (Lines -> Line .)
    IDEN            reduce using rule 7 (Lines -> Line .)
    DO              reduce using rule 7 (Lines -> Line .)
    IF              reduce using rule 7 (Lines -> Line .)
    GOTO            reduce using rule 7 (Lines -> Line .)
    WRITE           reduce using rule 7 (Lines -> Line .)
    PRINT           reduce using rule 7 (Lines -> Line .)
    READ            reduce using rule 7 (Lines -> Line .)
    MOD             reduce using rule 7 (Lines -> Line .)
    INT_IDEN        reduce using rule 7 (Lines -> Line .)
    REAL_IDEN       reduce using rule 7 (Lines -> Line .)
    DOUBLE_IDEN     reduce using rule 7 (Lines -> Line .)
    COMPLEX_IDEN    reduce using rule 7 (Lines -> Line .)
    LOGICAL_IDEN    reduce using rule 7 (Lines -> Line .)
    CHARACTER_IDEN  reduce using rule 7 (Lines -> Line .)
    ELSE            reduce using rule 7 (Lines -> Line .)
    ENDIF           reduce using rule 7 (Lines -> Line .)
    RETURN          reduce using rule 7 (Lines -> Line .)


state 6

    (8) Line -> Start . Statement
    (11) Statement -> . FuncCall
    (12) Statement -> . Declaration
    (13) Statement -> . Assignment
    (14) Statement -> . Do_Statement
    (15) Statement -> . If_Statement
    (16) Statement -> . Goto_statement
    (35) FuncCall -> . IO_Function
    (36) FuncCall -> . Math_Function
    (17) Declaration -> . Type Variables
    (18) Declaration -> . COMMON SEPARATOR IDEN SEPARATOR Variables
    (45) Assignment -> . IDEN = Expression_paren
    (71) Do_Statement -> . DO LABEL IDEN = Loop_Values Lines LABEL CONTINUE
    (77) If_Statement -> . IF ( Conditions ) THEN Lines If_Continuation ENDIF
    (92) Goto_statement -> . GOTO LABEL
    (38) IO_Function -> . WRITE Def Variables
    (39) IO_Function -> . PRINT Def Variables
    (40) IO_Function -> . READ Def Variables
    (37) Math_Function -> . MOD ( Variables )
    (19) Type -> . INT_IDEN
    (20) Type -> . REAL_IDEN
    (21) Type -> . DOUBLE_IDEN
    (22) Type -> . COMPLEX_IDEN
    (23) Type -> . LOGICAL_IDEN
    (24) Type -> . CHARACTER_IDEN

    COMMON          shift and go to state 20
    IDEN            shift and go to state 21
    DO              shift and go to state 22
    IF              shift and go to state 23
    GOTO            shift and go to state 24
    WRITE           shift and go to state 25
    PRINT           shift and go to state 26
    READ            shift and go to state 27
    MOD             shift and go to state 28
    INT_IDEN        shift and go to state 29
    REAL_IDEN       shift and go to state 30
    DOUBLE_IDEN     shift and go to state 31
    COMPLEX_IDEN    shift and go to state 32
    LOGICAL_IDEN    shift and go to state 33
    CHARACTER_IDEN  shift and go to state 34

    Statement                      shift and go to state 10
    FuncCall                       shift and go to state 11
    Declaration                    shift and go to state 12
    Assignment                     shift and go to state 13
    Do_Statement                   shift and go to state 14
    If_Statement                   shift and go to state 15
    Goto_statement                 shift and go to state 16
    IO_Function                    shift and go to state 17
    Math_Function                  shift and go to state 18
    Type                           shift and go to state 19

state 7

    (9) Start -> LABEL .

    COMMON          reduce using rule 9 (Start -> LABEL .)
    IDEN            reduce using rule 9 (Start -> LABEL .)
    DO              reduce using rule 9 (Start -> LABEL .)
    IF              reduce using rule 9 (Start -> LABEL .)
    GOTO            reduce using rule 9 (Start -> LABEL .)
    WRITE           reduce using rule 9 (Start -> LABEL .)
    PRINT           reduce using rule 9 (Start -> LABEL .)
    READ            reduce using rule 9 (Start -> LABEL .)
    MOD             reduce using rule 9 (Start -> LABEL .)
    INT_IDEN        reduce using rule 9 (Start -> LABEL .)
    REAL_IDEN       reduce using rule 9 (Start -> LABEL .)
    DOUBLE_IDEN     reduce using rule 9 (Start -> LABEL .)
    COMPLEX_IDEN    reduce using rule 9 (Start -> LABEL .)
    LOGICAL_IDEN    reduce using rule 9 (Start -> LABEL .)
    CHARACTER_IDEN  reduce using rule 9 (Start -> LABEL .)


state 8

    (1) Program -> PROGRAM NAME Lines END . Program_continuations
    (2) Program_continuations -> . Program_continuations Program_continuation
    (3) Program_continuations -> .

    INT_IDEN        reduce using rule 3 (Program_continuations -> .)
    REAL_IDEN       reduce using rule 3 (Program_continuations -> .)
    DOUBLE_IDEN     reduce using rule 3 (Program_continuations -> .)
    COMPLEX_IDEN    reduce using rule 3 (Program_continuations -> .)
    LOGICAL_IDEN    reduce using rule 3 (Program_continuations -> .)
    CHARACTER_IDEN  reduce using rule 3 (Program_continuations -> .)
    $end            reduce using rule 3 (Program_continuations -> .)

    Program_continuations          shift and go to state 35

state 9

    (6) Lines -> Lines Line .

    END             reduce using rule 6 (Lines -> Lines Line .)
    LABEL           reduce using rule 6 (Lines -> Lines Line .)
    COMMON          reduce using rule 6 (Lines -> Lines Line .)
    IDEN            reduce using rule 6 (Lines -> Lines Line .)
    DO              reduce using rule 6 (Lines -> Lines Line .)
    IF              reduce using rule 6 (Lines -> Lines Line .)
    GOTO            reduce using rule 6 (Lines -> Lines Line .)
    WRITE           reduce using rule 6 (Lines -> Lines Line .)
    PRINT           reduce using rule 6 (Lines -> Lines Line .)
    READ            reduce using rule 6 (Lines -> Lines Line .)
    MOD             reduce using rule 6 (Lines -> Lines Line .)
    INT_IDEN        reduce using rule 6 (Lines -> Lines Line .)
    REAL_IDEN       reduce using rule 6 (Lines -> Lines Line .)
    DOUBLE_IDEN     reduce using rule 6 (Lines -> Lines Line .)
    COMPLEX_IDEN    reduce using rule 6 (Lines -> Lines Line .)
    LOGICAL_IDEN    reduce using rule 6 (Lines -> Lines Line .)
    CHARACTER_IDEN  reduce using rule 6 (Lines -> Lines Line .)
    ELSE            reduce using rule 6 (Lines -> Lines Line .)
    ENDIF           reduce using rule 6 (Lines -> Lines Line .)
    RETURN          reduce using rule 6 (Lines -> Lines Line .)


state 10

    (8) Line -> Start Statement .

    END             reduce using rule 8 (Line -> Start Statement .)
    LABEL           reduce using rule 8 (Line -> Start Statement .)
    COMMON          reduce using rule 8 (Line -> Start Statement .)
    IDEN            reduce using rule 8 (Line -> Start Statement .)
    DO              reduce using rule 8 (Line -> Start Statement .)
    IF              reduce using rule 8 (Line -> Start Statement .)
    GOTO            reduce using rule 8 (Line -> Start Statement .)
    WRITE           reduce using rule 8 (Line -> Start Statement .)
    PRINT           reduce using rule 8 (Line -> Start Statement .)
    READ            reduce using rule 8 (Line -> Start Statement .)
    MOD             reduce using rule 8 (Line -> Start Statement .)
    INT_IDEN        reduce using rule 8 (Line -> Start Statement .)
    REAL_IDEN       reduce using rule 8 (Line -> Start Statement .)
    DOUBLE_IDEN     reduce using rule 8 (Line -> Start Statement .)
    COMPLEX_IDEN    reduce using rule 8 (Line -> Start Statement .)
    LOGICAL_IDEN    reduce using rule 8 (Line -> Start Statement .)
    CHARACTER_IDEN  reduce using rule 8 (Line -> Start Statement .)
    ELSE            reduce using rule 8 (Line -> Start Statement .)
    ENDIF           reduce using rule 8 (Line -> Start Statement .)
    RETURN          reduce using rule 8 (Line -> Start Statement .)


state 11

    (11) Statement -> FuncCall .

    END             reduce using rule 11 (Statement -> FuncCall .)
    LABEL           reduce using rule 11 (Statement -> FuncCall .)
    COMMON          reduce using rule 11 (Statement -> FuncCall .)
    IDEN            reduce using rule 11 (Statement -> FuncCall .)
    DO              reduce using rule 11 (Statement -> FuncCall .)
    IF              reduce using rule 11 (Statement -> FuncCall .)
    GOTO            reduce using rule 11 (Statement -> FuncCall .)
    WRITE           reduce using rule 11 (Statement -> FuncCall .)
    PRINT           reduce using rule 11 (Statement -> FuncCall .)
    READ            reduce using rule 11 (Statement -> FuncCall .)
    MOD             reduce using rule 11 (Statement -> FuncCall .)
    INT_IDEN        reduce using rule 11 (Statement -> FuncCall .)
    REAL_IDEN       reduce using rule 11 (Statement -> FuncCall .)
    DOUBLE_IDEN     reduce using rule 11 (Statement -> FuncCall .)
    COMPLEX_IDEN    reduce using rule 11 (Statement -> FuncCall .)
    LOGICAL_IDEN    reduce using rule 11 (Statement -> FuncCall .)
    CHARACTER_IDEN  reduce using rule 11 (Statement -> FuncCall .)
    ELSE            reduce using rule 11 (Statement -> FuncCall .)
    ENDIF           reduce using rule 11 (Statement -> FuncCall .)
    RETURN          reduce using rule 11 (Statement -> FuncCall .)


state 12

    (12) Statement -> Declaration .

    END             reduce using rule 12 (Statement -> Declaration .)
    LABEL           reduce using rule 12 (Statement -> Declaration .)
    COMMON          reduce using rule 12 (Statement -> Declaration .)
    IDEN            reduce using rule 12 (Statement -> Declaration .)
    DO              reduce using rule 12 (Statement -> Declaration .)
    IF              reduce using rule 12 (Statement -> Declaration .)
    GOTO            reduce using rule 12 (Statement -> Declaration .)
    WRITE           reduce using rule 12 (Statement -> Declaration .)
    PRINT           reduce using rule 12 (Statement -> Declaration .)
    READ            reduce using rule 12 (Statement -> Declaration .)
    MOD             reduce using rule 12 (Statement -> Declaration .)
    INT_IDEN        reduce using rule 12 (Statement -> Declaration .)
    REAL_IDEN       reduce using rule 12 (Statement -> Declaration .)
    DOUBLE_IDEN     reduce using rule 12 (Statement -> Declaration .)
    COMPLEX_IDEN    reduce using rule 12 (Statement -> Declaration .)
    LOGICAL_IDEN    reduce using rule 12 (Statement -> Declaration .)
    CHARACTER_IDEN  reduce using rule 12 (Statement -> Declaration .)
    ELSE            reduce using rule 12 (Statement -> Declaration .)
    ENDIF           reduce using rule 12 (Statement -> Declaration .)
    RETURN          reduce using rule 12 (Statement -> Declaration .)


state 13

    (13) Statement -> Assignment .

    END             reduce using rule 13 (Statement -> Assignment .)
    LABEL           reduce using rule 13 (Statement -> Assignment .)
    COMMON          reduce using rule 13 (Statement -> Assignment .)
    IDEN            reduce using rule 13 (Statement -> Assignment .)
    DO              reduce using rule 13 (Statement -> Assignment .)
    IF              reduce using rule 13 (Statement -> Assignment .)
    GOTO            reduce using rule 13 (Statement -> Assignment .)
    WRITE           reduce using rule 13 (Statement -> Assignment .)
    PRINT           reduce using rule 13 (Statement -> Assignment .)
    READ            reduce using rule 13 (Statement -> Assignment .)
    MOD             reduce using rule 13 (Statement -> Assignment .)
    INT_IDEN        reduce using rule 13 (Statement -> Assignment .)
    REAL_IDEN       reduce using rule 13 (Statement -> Assignment .)
    DOUBLE_IDEN     reduce using rule 13 (Statement -> Assignment .)
    COMPLEX_IDEN    reduce using rule 13 (Statement -> Assignment .)
    LOGICAL_IDEN    reduce using rule 13 (Statement -> Assignment .)
    CHARACTER_IDEN  reduce using rule 13 (Statement -> Assignment .)
    ELSE            reduce using rule 13 (Statement -> Assignment .)
    ENDIF           reduce using rule 13 (Statement -> Assignment .)
    RETURN          reduce using rule 13 (Statement -> Assignment .)


state 14

    (14) Statement -> Do_Statement .
